--- a/public/html/info.html
+++ b/public/html/info.html
@@ -14,6 +14,7 @@
             <div class="col jumbotron header">
                 <h1 id="dog-name">Dog Name</h1>
                 <p id="dog-horoscope">Dog Horoscope</p>
+                <canvas id="myChart" width="400" height="400"></canvas>
             </div>
         </div>
 
@@ -47,5 +48,7 @@
         </div>
 
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="../models/chart.js"></script>
 </body>
 </html>
