--- a/public/html/info.html
+++ b/public/html/info.html
@@ -50,5 +50,6 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="../models/chart.js"></script>
+<script src="../js/tip.js"></script>
 </body>
 </html>
